--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,15 @@
   flex-direction: column;
 }
 
-.app__body {
+/* options styles */
+.options {
   display: flex;
   justify-content: space-around;
+}
+
+.options__field {
+  display: flex;
+  flex-direction: column;
 }
 
 /* controls styles */
